<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <TextView
            android:id="@+id/countItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/countItems"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_alignParentTop="true"
            android:text="@string/timeText" />

        <TextView
            android:id="@+id/sourceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/timeText"
            android:textSize="11sp"
            android:layout_marginStart="10dp"
            android:text="@string/sourceText" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleText"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:layout_toStartOf="@+id/imageView"
            android:text="@string/descriptionText"
            android:textColor="#3b5fcb"
            android:textSize="11sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeText"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/imageView"
            android:text="@string/titleText"
            android:textColor="#213571"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="5dp"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/newsImage" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>